# cryptopp-cmake

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  appveyor.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake-build.yml  commitlint.yml  release.yml
cmake/: CPM.cmake  ConfigFiles.cmake  GetCryptoppSources.cmake  GitClone.cmake  ResetInitialCompilerOptions.cmake  TargetArch.cmake
cmake/scripts/: standard-version-updater.js
cryptopp/: CMakeLists.txt  config.cmake.in  config.pc.in  cryptoppConfig.cmake  sources.cmake
test/: CMakeLists.txt
test/cmake/: CPM.cmake
test/example-src/: main.cpp
test/integration/: CMakeLists.txt
test/integration/cmake/: ProjectInstallTests.cmake
test/integration/int-find-package/: CMakeLists.txt
test/integration/int-install/: CMakeLists.txt  checks.cmake
test/integration/int-install-default/: CMakeLists.txt
test/integration/int-install-prefix/: CMakeLists.txt
test/standard-cpm/: CMakeLists.txt  main.cpp
test/unit/: CMakeLists.txt
test/unit/disable-feature/: CMakeLists.txt
test/unit/include-prefix/: CMakeLists.txt
test/unit/no-install/: CMakeLists.txt
test/unit/standard-cpm/: CMakeLists.txt
